# django-with-docker

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Dockerfile.nginx  README.md  docker-compose.yml  pyproject.toml  requirements.txt
nginx/: Dockerfile  twitter_clone.conf
twitter_clone/: manage.py
twitter_clone/tweets/: urls.py
twitter_clone/tweets/tests/: test_views.py
twitter_clone/twitter_clone/: settings.py  twitter_clone.ini  urls.py  views.py  wsgi.py
twitter_clone/twitter_clone/settings/: base.py  test.py
