[tool.poetry]
name = "django-with-docker"
version = "0.1.0"
description = ""
authors = ["Kan Ouivirach <kan@odds.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
psycopg2 = "^2.9.9"
uwsgi = "^2.0.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
